--- a/postest/nbproject/project.properties
+++ b/postest/nbproject/project.properties
@@ -31,7 +31,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.AS.jar}
+    ${file.reference.AS.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
